--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -160,7 +160,7 @@
     <button id="cancelBtn" class="btn btn-secondary btn-lg btn-wide" type="button">
       <span data-i18n="cancel.button" class="ms-Button-label">Cancel</span>
     </button>
-    <button id="confirmBtn" class="btn btn-primary btn-lg btn-wide" type="button">
+    <button id="confirmBtn" class="btn btn-primary br-bottom-right btn-lg btn-wide" type="button">
       <span data-i18n="confirm.button" class="ms-Button-label">Confirm</span>
     </button>
   </div>
@@ -172,7 +172,7 @@
     <button id="backBtn" class="btn btn-secondary btn-lg" type="button">
       <span data-i18n="back.button" class="ms-Button-label">Back</span>
     </button>
-    <button id="closeEventPlannerWindow" class="btn btn-primary btn-lg" type="button">
+    <button id="closeEventPlannerWindow" class="btn btn-primary br-bottom-right btn-lg" type="button">
       <span data-i18n="close.button" class="ms-Button-label">Close</span>
     </button>
   </div>
