--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -167,9 +167,7 @@
   <div class="room-block" role="group" aria-label="Room summary">
     <div class="room-icon" aria-hidden="true">👥</div>
     <div class="room-meta">
-      <a id="placeholderRoomLink" class="room-name" href="#" target="_blank" rel="noopener">
-        <span id="placeholderRoomName_link">Boreal 12 Room Uranus (18p)</span>
-      </a>
+        <span id="placeholderRoomName" class="confirm-name"></span>
       <div class="room-building" id="placeholderBuilding">Boreal 1</div>
     </div>
   </div>
