--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -165,12 +165,13 @@
 
   <!-- Room summary block -->
   <div class="room-block" role="group" aria-label="Room summary">
-    <div class="room-icon" aria-hidden="true">👥</div>
-    <div class="room-meta">
-        <span id="placeholderRoomName" class="confirm-name"></span>
-      <div class="room-building" id="placeholderBuilding">Boreal 1</div>
+  <div class="room-icon" aria-hidden="true">📍</div>
+  <div class="room-meta">
+    <div class="room-building">
+      <span id="placeholderBuilding"></span>
     </div>
   </div>
+</div>
 
   <!-- Buttons -->
   <div id="confirmCancelBtns" class="confirm-actions">
