--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -167,9 +167,8 @@
   <div class="room-block" role="group" aria-label="Room summary">
   <div class="room-icon" aria-hidden="true">📍</div>
   <div class="room-meta">
-    <div class="room-building">
-      <span id="placeholderBuilding"></span>
-    </div>
+    <div id="placeholderRoomName_block" class="room-name"></div>
+    <div id="placeholderBuilding" class="room-building"></div>
   </div>
 </div>
 
