--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -243,6 +243,19 @@
     </div>
   </div>
 
+<!-- Close confirmation overlay -->
+<div id="closeConfirmOverlay" class="modal-overlay" style="display:none;">
+  <div class="modal-card" role="dialog" aria-labelledby="closeConfirmTitle" aria-modal="true">
+    <h3 id="closeConfirmTitle" data-i18n="close.confirm.title">Close the add-in?</h3>
+    <p data-i18n="close.confirm.body">You’re about to close the Smart Meeting window.</p>
+    <div class="modal-actions">
+      <button id="confirmCloseYes" class="btn btn-secondary" type="button" data-i18n="yes">Yes</button>
+      <button id="confirmCloseNo" class="btn btn-primary" type="button" data-i18n="no">No</button>
+    </div>
+  </div>
+</div>
+
+
   <script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/javascript/controls/config.js"></script>
   <script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/javascript/taskpaneSSO.js"></script>
 </body>
