--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -35,7 +35,7 @@
       <div class="boxed-field boxed-field--select">
         <div class="boxed-field__title" data-i18n="meeting.type">Meeting Type</div>
           <select id="meetingType" name="meetingType" class="boxed-field__control">
-            <option data-i18n="hybird" value="Hybrid" selected>Hybrid</option>
+            <option data-i18n="hybrid" value="Hybrid" selected>Hybrid</option>
             <option data-i18n="in.person" value="In Person">In Person</option>
           </select>
       </div>
