--- a/taskpane.html
+++ b/taskpane.html
@@ -82,7 +82,7 @@
                 <div data-i18n="meeting.type" class="ms-Label">Meeting Type</div>
                 <label class="ms-RadioButton">
                   <input type="radio" name="meetingType" value="Hybrid" checked>
-                  <span data-i18n="hybird" class="ms-RadioButton-label">Hybrid</span>
+                  <span data-i18n="hybrid" class="ms-RadioButton-label">Hybrid</span>
                 </label>
                 <label class="ms-RadioButton">
                   <input type="radio" name="meetingType" value="InPerson">
