add a confirm image

--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -148,7 +148,9 @@
   <!-- Hero Illustration / state icon -->
   <div class="confirm-hero" aria-hidden="true">
     <!-- If you prefer an image, swap the <div> for an <img id="confirmIllustration" src="..." alt=""/> -->
-    <div class="confirm-ill">👍</div>
+    <div class="confirm-ill">
+      <img class="pxs-respond-img" src="assets/thumps-up.png">
+    </div>
   </div>
 
   <!-- Title + message -->
