--- a/commands.html
+++ b/commands.html
@@ -1,18 +1,31 @@
-<!-- Copyright (c) Microsoft Corporation. All rights reserved. Licensed under the MIT License. -->
+<!doctype html><html>
+  <head>
+    <meta charset="utf-8" />
+    <title>OA Meeting Room Assistant - Stub</title>
+    <!-- Hosted Office.js --><script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
 
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-
-    <!-- Office JavaScript API -->
-    <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
-</head>
-
-<body>
-  
-</body>
-
+    <script>// When Office is ready, register the OnSend handler so Outlook can call it.Office.onReady(function () {
+        try {
+          // Newer event-based model (recommended)if (window.Office && Office.actions && typeof Office.actions.associate === "function") {
+            Office.actions.associate("onAppointmentSendHandler", function (event) {
+              try {
+                // No-op: always allow the send                event.completed({ allowEvent: true });
+              } catch (e) {
+                // fallback: ensure we always allow send if anything goes wrongtry { event.completed({ allowEvent: true }); } catch (_) {}
+              }
+            });
+          } else {
+            // Older or unexpected host: expose a global handler name (defensive)window.onAppointmentSendHandler = function (event) {
+              try { event.completed({ allowEvent: true }); } catch (e) {}
+            };
+          }
+        } catch (ex) {
+          // nothing to do — ensure we don't throw during loadconsole.warn("OA stub load error", ex);
+        }
+      });
+    </script>
+  </head>
+  <body>
+    <!-- intentionally empty: runtime only -->
+  </body>
 </html>
