change the building default selection

--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -22,8 +22,8 @@
       <div class="boxed-field boxed-field--select">
         <div class="boxed-field__title" data-i18n="building">Building</div>
         <select id="building" class="boxed-field__control">
-          <option value="Tour and Taxi (02CMP)" selected>Tour and Taxi (02CMP)</option>
-          <option value="Brussels - Towers or Boreal (02PLD)">Brussels - Towers or Boreal (02PLD)</option>
+          <option value="Brussels - Towers or Boreal (02PLD)" selected>Brussels - Towers or Boreal (02PLD)</option>
+          <option value="Tour and Taxi (02CMP)">Tour and Taxi (02CMP)</option>
         </select>
       </div>
       <!-- Room amenities (dynamic; includes 'Additional Seats') -->
