reverting back to the last taskpaneSSO.html

--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -148,23 +148,8 @@
   <!-- Hero Illustration / state icon -->
   <div class="confirm-hero" aria-hidden="true">
     <!-- If you prefer an image, swap the <div> for an <img id="confirmIllustration" src="..." alt=""/> -->
-    <div class="confirm-ill" aria-hidden="true">
-      <img
-        id="roomFoundImage"
-        class="pxs-respond-img"
-        src="assets/logo-filled.png"
-        alt=""
-        style="display:block;"
-      />
-      <div
-        id="noRoomFoundImage"
-        class="pxs-respond-emoji"
-        role="img"
-        aria-label="No meeting rooms found"
-        style="display:none;"
-      >
-        🔍
-      </div>
+    <div class="confirm-ill">
+      <img class="pxs-respond-img" src="assets/thumps-up.png">
     </div>
   </div>
 
@@ -298,7 +283,6 @@
       </div>
     </div>
   </div>
-
 
   <script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/javascript/controls/config.js"></script>
   <script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/javascript/taskpaneSSO.js"></script>
