adding ID to the app version tag

--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -241,7 +241,7 @@
             <span class="toggle-label">Off</span>
           </div>
         </div>
-        <span class="app-version">vX.X.X.X</span>
+        <span id="appVersion" class="app-version">vX.X.X.X</span>
       </div>
     </div>
   </div>
