--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -213,9 +213,9 @@
         <div class="group">
           <div class="ms-Label">Language</div>
           <nav id="language-bar" class="lang-bar">
-            <a id="link-en" data-lang="en">EN</a>
-            <a id="link-nl" data-lang="nl">NL</a>
-            <a id="link-fr" data-lang="fr">FR</a>
+            <a id="link-en" data-lang="en" onclick="setAddinLanguage('en-nav')">EN</a>
+            <a id="link-nl" data-lang="nl" onclick="setAddinLanguage('nl-nav')">NL</a>
+            <a id="link-fr" data-lang="fr" onclick="setAddinLanguage('fr-nav')">FR</a>
           </nav>
         </div>
     <!-- Environment -->
