--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -213,9 +213,9 @@
         <div class="group">
           <div class="ms-Label">Language</div>
           <nav id="language-bar" class="lang-bar">
-            <a id="link-en" data-lang="en">EN</a>
-            <a id="link-nl" data-lang="nl"">NL</a>
-            <a id="link-fr" data-lang="fr">FR</a>
+            <a id="link-en" data-lang="en-nav">EN</a>
+            <a id="link-nl" data-lang="nl-nav">NL</a>
+            <a id="link-fr" data-lang="fr-nav">FR</a>
           </nav>
         </div>
     <!-- Environment -->
