Fix the YES & No buttons

--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -252,8 +252,8 @@
     <h3 id="closeConfirmTitle" data-i18n="close.confirm.title">Close the add-in?</h3>
     <p data-i18n="close.confirm.body">You’re about to close the Smart Meeting window.</p>
     <div class="modal-actions">
-      <button id="confirmCloseYes" class="btn btn-secondary btn-lg btn-wide" type="button" data-i18n="yes">Yes</button>
-      <button id="confirmCloseNo" class="btn btn-primary br-bottom-right btn-lg btn-wide" type="button" data-i18n="no">No</button>
+      <button id="confirmCloseNo" class="btn btn-secondary btn-lg btn-wide" type="button" data-i18n="no.button">No</button>
+      <button id="confirmCloseYes" class="btn btn-primary br-bottom-right btn-lg btn-wide" type="button" data-i18n="yes.button">Yes</button>
     </div>
   </div>
 </div>
