--- a/fallbackauthdialog.html
+++ b/fallbackauthdialog.html
@@ -3,25 +3,41 @@
   <head>
     <meta charset="utf-8" />
     <title>Fallback SSO</title>
-    <!-- Office.js is required so we can message the parent add-in dialog -->
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
-    <script>
-      // When Microsoft redirects here, the token (or error) is in the URL hash.
-      Office.onReady(function () {
-        try {
-          var hash = window.location.hash || "";
-          if (!hash) {
-            Office.context.ui.messageParent("error=NoHash");
-            return;
-          }
-          // Send the whole fragment back; parent will parse it.
-          Office.context.ui.messageParent(hash);
-        } catch (e) {
-          // Last-resort debug text if something very unexpected happens
-          document.body.textContent = "Could not send token to parent: " + e;
-        }
-      });
-    </script>
+    <style>
+      body { font-family: system-ui, Arial, sans-serif; margin: 16px; }
+    </style>
   </head>
   <body>Authenticating...</body>
+  <script>
+    (function () {
+      const hash = window.location.hash || "";
+      const start = Date.now();
+      const TIMEOUT_MS = 90_000;  
+      const INTERVAL_MS = 300;
+
+      function trySend() {
+        try {
+
+          if (window.Office && Office.context && Office.context.ui && typeof Office.context.ui.messageParent === "function") {
+            Office.context.ui.messageParent(hash || "error=NoHash");
+            return; // done
+          }
+        } catch (e) {
+
+        }
+
+        if (Date.now() - start > TIMEOUT_MS) {
+          document.body.textContent =
+            "Auth dialog timed out waiting for permission to communicate with the add-in.";
+          return;
+        }
+        setTimeout(trySend, INTERVAL_MS);
+      }
+      trySend();
+      if (window.Office && Office.onReady) {
+        Office.onReady(function () { trySend(); });
+      }
+    })();
+  </script>
 </html>
