--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>OA Meeting Assistant</title>
-  <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
+  <script src="https://robertocampione.github.io/OAMeetingAssistant/office.js"></script>
   <link rel="stylesheet" href="taskpane.css" />
 </head>
 <body class="ms-Fabric" dir="ltr">
