--- a/fallbackauthdialog.html
+++ b/fallbackauthdialog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Fallback SSO</title>
-    <script src="https://robertocampione.github.io/OAMeetingAssistant/office.js"></script>
+    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
     <style>
       body { font-family: system-ui, Arial, sans-serif; margin: 16px; }
     </style>
