--- a/fallbackauthdialog.html
+++ b/fallbackauthdialog.html
@@ -1,43 +1,47 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Fallback SSO</title>
-    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
-    <style>
-      body { font-family: system-ui, Arial, sans-serif; margin: 16px; }
-    </style>
-  </head>
-  <body>Authenticating...</body>
-  <script>
-    (function () {
-      const hash = window.location.hash || "";
-      const start = Date.now();
-      const TIMEOUT_MS = 90_000;  
-      const INTERVAL_MS = 300;
+<script>
+  (function () {
+    const hash = window.location.hash || "";
+    const start = Date.now();
+    const TIMEOUT_MS  = 120000; // up to 2 min in bad networks
+    const TICK_FAST   = 50;     // fast spin first
+    const TICK_NORMAL = 250;    // then relax
+    let attempts = 0;
 
-      function trySend() {
-        try {
+    function trySend() {
+      attempts++;
 
-          if (window.Office && Office.context && Office.context.ui && typeof Office.context.ui.messageParent === "function") {
-            Office.context.ui.messageParent(hash || "error=NoHash");
-            return; // done
-          }
-        } catch (e) {
-
-        }
-
-        if (Date.now() - start > TIMEOUT_MS) {
-          document.body.textContent =
-            "Auth dialog timed out waiting for permission to communicate with the add-in.";
+      // 1) Try immediately if the API exists (best case)
+      try {
+        if (Office && Office.context && Office.context.ui && typeof Office.context.ui.messageParent === "function") {
+          Office.context.ui.messageParent(hash || "error=NoHash");
           return;
         }
-        setTimeout(trySend, INTERVAL_MS);
+      } catch (e) {
+        // Office object not ready yet, keep trying
       }
-      trySend();
-      if (window.Office && Office.onReady) {
-        Office.onReady(function () { trySend(); });
+
+      // 2) Try to *kick* Office init early
+      try {
+        if (typeof Office !== "undefined" && typeof Office.onReady === "function") {
+          Office.onReady(function () {
+            trySend();
+          });
+        }
+      } catch (e) {
+        // ignore
       }
-    })();
-  </script>
-</html>
+
+      // 3) Stop after timeout
+      if (Date.now() - start > TIMEOUT_MS) {
+        document.body.textContent =
+          "Auth dialog timed out waiting for permission to communicate with the add-in.";
+        return;
+      }
+
+      // 4) Keep polling—very fast for a few seconds, then slower
+      setTimeout(trySend, attempts < 60 ? TICK_FAST : TICK_NORMAL);
+    }
+
+    trySend();
+  })();
+</script>
