--- a/fallbackauthdialog.html
+++ b/fallbackauthdialog.html
@@ -3,55 +3,41 @@
   <head>
     <meta charset="utf-8" />
     <title>Fallback SSO</title>
-
-    <!-- REQUIRED: load Office.js so messageParent exists inside the dialog -->
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
-
     <style>
       body { font-family: system-ui, Arial, sans-serif; margin: 16px; }
     </style>
   </head>
   <body>Authenticating...</body>
-
   <script>
     (function () {
-      const hash = window.location.hash || "";     // contains access_token on success
-      const started = Date.now();
-      const TIMEOUT_MS  = 120000;
-      const FAST_MS     = 50;
-      const NORMAL_MS   = 250;
-      let attempts = 0;
+      const hash = window.location.hash || "";
+      const start = Date.now();
+      const TIMEOUT_MS = 90_000;  
+      const INTERVAL_MS = 300;
 
       function trySend() {
-        attempts++;
-
-        // 1) Best case: Office dialog API is ready — send immediately
         try {
-          if (Office && Office.context && Office.context.ui &&
-              typeof Office.context.ui.messageParent === "function") {
+
+          if (window.Office && Office.context && Office.context.ui && typeof Office.context.ui.messageParent === "function") {
             Office.context.ui.messageParent(hash || "error=NoHash");
             return; // done
           }
-        } catch (_) { /* Office not ready yet */ }
+        } catch (e) {
 
-        // 2) Stop after timeout
-        if (Date.now() - started > TIMEOUT_MS) {
+        }
+
+        if (Date.now() - start > TIMEOUT_MS) {
           document.body.textContent =
             "Auth dialog timed out waiting for permission to communicate with the add-in.";
           return;
         }
-
-        // 3) Keep polling; also wire Office.onReady if/when it appears
-        setTimeout(trySend, attempts < 60 ? FAST_MS : NORMAL_MS);
-        try {
-          if (typeof Office !== "undefined" && typeof Office.onReady === "function") {
-            Office.onReady(function () { trySend(); });
-          }
-        } catch (_) { /* ignore */ }
+        setTimeout(trySend, INTERVAL_MS);
       }
-
-      // Kick off
       trySend();
+      if (window.Office && Office.onReady) {
+        Office.onReady(function () { trySend(); });
+      }
     })();
   </script>
 </html>
