--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -53,33 +53,43 @@
           </label>
         </div>
       </div> -->
-      <!-- Extra time -->
       <div class="boxed-field">
-        <div class="boxed-field__title" data-i18n="extra.time.needed">Extra Time Needed</div>
-        <div class="two-col">
-          <div class="check-inline">
-            <label for="extraTimeBefore" data-i18n="extra.time.before">Before</label>
-            <input id="extraTimeBefore" class="boxed-field__control" type="number" min="0" max="15" value="0" style="width:32px;" />
-            <span class="ms-Checkbox-label">min</span>
-          </div>
-          <div class="check-inline">
-            <label for="extraTimeAfter" data-i18n="extra.time.after">After</label>
-            <input id="extraTimeAfter" class="boxed-field__control" type="number" min="0" max="15" value="0" style="width:32px;" />
-            <span class="ms-Checkbox-label">min</span>
-          </div>
-        </div>
+        <label class="ms-Checkbox extra-features__toggle">
+          <input id="toggleExtraFeatures" type="checkbox" aria-controls="extraFeaturesSection" aria-expanded="false" />
+          <span class="ms-Checkbox-label">Select extra features</span>
+        </label>
       </div>
 
-      <div class="boxed-field">
-        <div class="two-col">
-          <label class="ms-Checkbox">
-            <input id="isPrivate" type="checkbox" />
-            <span class="ms-Checkbox-label" data-i18n="private.meeting">Private meeting</span>
-          </label>
-          <label class="ms-Checkbox">
-            <input id="onBehalfOf" type="checkbox" />
-            <span class="ms-Checkbox-label" data-i18n="on.behalf.of">On behalf of</span>
-          </label>
+      <div id="extraFeaturesSection" class="extra-features boxed-field" hidden>
+        <div id="additionalSeatsContainer" class="extra-features__group"></div>
+
+        <div class="extra-features__group">
+          <div class="boxed-field__title" data-i18n="extra.time.needed">Extra Time Needed</div>
+          <div class="two-col">
+            <div class="check-inline">
+              <label for="extraTimeBefore" data-i18n="extra.time.before">Before</label>
+              <input id="extraTimeBefore" class="boxed-field__control" type="number" min="0" max="15" value="0" style="width:32px;" />
+              <span class="ms-Checkbox-label">min</span>
+            </div>
+            <div class="check-inline">
+              <label for="extraTimeAfter" data-i18n="extra.time.after">After</label>
+              <input id="extraTimeAfter" class="boxed-field__control" type="number" min="0" max="15" value="0" style="width:32px;" />
+              <span class="ms-Checkbox-label">min</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="extra-features__group">
+          <div class="two-col">
+            <label class="ms-Checkbox">
+              <input id="isPrivate" type="checkbox" />
+              <span class="ms-Checkbox-label" data-i18n="private.meeting">Private meeting</span>
+            </label>
+            <label class="ms-Checkbox">
+              <input id="onBehalfOf" type="checkbox" />
+              <span class="ms-Checkbox-label" data-i18n="on.behalf.of">On behalf of</span>
+            </label>
+          </div>
         </div>
       </div>
 
