--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -56,7 +56,7 @@
       <div class="boxed-field">
         <label class="ms-Checkbox extra-features__toggle">
           <input id="toggleExtraFeatures" type="checkbox" aria-controls="extraFeaturesSection" aria-expanded="false" />
-          <span class="ms-Checkbox-label">Select extra features</span>
+          <span class="ms-Checkbox-label">Additional Features</span>
         </label>
       </div>
 
